Lesson 2 | Layout: calc buttons padding

--- a/training-calculator/app/src/main/res/layout/activity_main.xml
+++ b/training-calculator/app/src/main/res/layout/activity_main.xml
@@ -1,102 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:columnCount="4"
-    android:orientation="horizontal"
-    android:padding="8dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/screen"
-        android:layout_columnSpan="4"
-        android:layout_gravity="fill"
-        android:inputType="numberSigned|numberDecimal" />
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:columnCount="4"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-    <Button
-        android:id="@+id/key_1"
-        android:text="@string/key_1" />
+        <EditText
+            android:id="@+id/screen"
+            android:layout_columnSpan="4"
+            android:layout_gravity="fill"
+            android:inputType="numberSigned|numberDecimal" />
 
-    <Button
-        android:id="@+id/key_2"
-        android:text="@string/key_2" />
+        <Button
+            android:id="@+id/key_1"
+            android:layout_margin="4dp"
+            android:text="@string/key_1" />
 
-    <Button
-        android:id="@+id/key_3"
-        android:text="@string/key_3" />
+        <Button
+            android:id="@+id/key_2"
+            android:layout_margin="4dp"
+            android:text="@string/key_2" />
 
-    <Button
-        android:id="@+id/key_plus"
-        android:layout_rowSpan="2"
-        android:layout_gravity="fill"
-        android:backgroundTint="@color/purple_700"
-        android:text="@string/key_plus" />
+        <Button
+            android:id="@+id/key_3"
+            android:layout_margin="4dp"
+            android:text="@string/key_3" />
 
-
-    <Button
-        android:id="@+id/key_4"
-        android:text="@string/key_4" />
-
-    <Button
-        android:id="@+id/key_5"
-        android:text="@string/key_5" />
-
-    <Button
-        android:id="@+id/key_6"
-        android:text="@string/key_6" />
-
-    <Button
-        android:id="@+id/key_7"
-        android:text="@string/key_7" />
-
-    <Button
-        android:id="@+id/key_8"
-        android:text="@string/key_8" />
-
-    <Button
-        android:id="@+id/key_9"
-        android:text="@string/key_9" />
-
-    <Button
-        android:id="@+id/key_minus"
-        android:backgroundTint="@color/purple_700"
-        android:text="@string/key_minus" />
-
-    <Button
-        android:id="@+id/key_0"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill"
-        android:text="@string/key_0" />
-
-    <Button
-        android:id="@+id/key_dot"
-        android:text="@string/key_dot" />
+        <Button
+            android:id="@+id/key_plus"
+            android:layout_rowSpan="2"
+            android:layout_gravity="fill"
+            android:layout_margin="4dp"
+            android:backgroundTint="@color/purple_700"
+            android:text="@string/key_plus" />
 
 
-    <Button
-        android:id="@+id/key_multiply"
-        android:backgroundTint="@color/purple_700"
-        android:text="@string/key_multiply" />
+        <Button
+            android:id="@+id/key_4"
+            android:layout_margin="4dp"
+            android:text="@string/key_4" />
 
-    <Button
-        android:id="@+id/key_result"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill"
-        android:backgroundTint="@color/black"
-        android:text="@string/key_result" />
+        <Button
+            android:id="@+id/key_5"
+            android:layout_margin="4dp"
+            android:text="@string/key_5" />
 
-    <Button
-        android:id="@+id/key_plus_minus"
-        android:text="@string/key_plus_minus" />
+        <Button
+            android:id="@+id/key_6"
+            android:layout_margin="4dp"
+            android:text="@string/key_6" />
 
-    <Button
-        android:id="@+id/key_divide"
-        android:backgroundTint="@color/purple_700"
-        android:text="@string/key_divide" />
+        <Button
+            android:id="@+id/key_7"
+            android:layout_margin="4dp"
+            android:text="@string/key_7" />
+
+        <Button
+            android:id="@+id/key_8"
+            android:layout_margin="4dp"
+            android:text="@string/key_8" />
+
+        <Button
+            android:id="@+id/key_9"
+            android:layout_margin="4dp"
+            android:text="@string/key_9" />
+
+        <Button
+            android:id="@+id/key_minus"
+            android:layout_margin="4dp"
+            android:backgroundTint="@color/purple_700"
+            android:text="@string/key_minus" />
+
+        <Button
+            android:id="@+id/key_0"
+            android:layout_columnSpan="2"
+            android:layout_gravity="fill"
+            android:layout_margin="4dp"
+            android:text="@string/key_0" />
+
+        <Button
+            android:id="@+id/key_dot"
+            android:layout_margin="4dp"
+            android:text="@string/key_dot" />
+
+
+        <Button
+            android:id="@+id/key_multiply"
+            android:layout_margin="4dp"
+            android:backgroundTint="@color/purple_700"
+            android:text="@string/key_multiply" />
+
+        <Button
+            android:id="@+id/key_result"
+            android:layout_columnSpan="2"
+            android:layout_gravity="fill"
+            android:layout_margin="4dp"
+            android:backgroundTint="@color/black"
+            android:text="@string/key_result" />
+
+        <Button
+            android:id="@+id/key_plus_minus"
+            android:layout_margin="4dp"
+            android:text="@string/key_plus_minus" />
+
+        <Button
+            android:id="@+id/key_divide"
+            android:layout_margin="4dp"
+            android:backgroundTint="@color/purple_700"
+            android:text="@string/key_divide" />
+
+    </GridLayout>
+
+</FrameLayout>
 
 
 
-</GridLayout>
